# espresso

./: CMakeLists.txt  Makefile  README.md  TODO.txt  gitMessage.txt
dep/caffeDataParser/: CMakeLists.txt
dep/caffeDataParser/example/: CMakeLists.txt
dep/caffeDataParser/example/src/: caffeDataParserMain.cpp
dep/caffeDataParser/inc/: caffeDataParser.hpp
dep/caffeDataParser/scripts/: CaffemodelParser.py
dep/caffeDataParser/src/: caffeDataParser.cpp  compile_proto.sh
example/: CMakeLists.txt  Makefile  cmake_install.cmake
example/src/: espressoTesterMain.cpp
inc/: ActivationLayer.hpp  CNN_Network.hpp  ConcatLayer.hpp  ConcatLayer_DKN.hpp  ConcatLayer_FPGA.hpp  ConvolutionLayer.hpp  ConvolutionLayer_FPGA.hpp  DataLayer.hpp  FullyConnectedLayer.hpp  Layer.hpp  Network.hpp  NormLayer.hpp  PoolingLayer.hpp  RELULayer.hpp  ResidualLayer.hpp  SoftMaxLayer.hpp  UpSampleLayer.hpp  UpSampleLayer_DKN.hpp  UpSampleLayer_FPGA.hpp  YOLOLayer.hpp  espresso_common.hpp  kernel.h  kernel_group.h  kernel_group_config.h  layer_config.hpp
inc/CPU/: ConcatLayer.hpp  ConvolutionLayer.hpp  DataLayer.hpp  ResidualLayer.hpp  UpSampleLayer.hpp  YOLOLayer.hpp
inc/Darknet/: ConcatLayer_DKN.hpp  ConvolutionLayer_DKN.hpp  ResidualLayer_DKN.hpp  UpSampleLayer_DKN.hpp
inc/FPGA/: AWP_cfg.hpp  AccelConfig.hpp  Bias.hpp  ConcatLayer_FPGA.hpp  ConvolutionLayer_FPGA.hpp  DetectionOutputLayer_FPGA.hpp  FAS_cfg.hpp  FlattenLayer_FPGA.hpp  InnerProductLayer_FPGA.hpp  InputMaps.hpp  KernelBias.hpp  Kernels.hpp  Layer_Iteration.hpp  Layer_Job.hpp  OutputMaps.hpp  PSROIPoolingLayer_FPGA.hpp  PartialMaps.hpp  PermuteLayer_FPGA.hpp  PixelSeqCfg.hpp  PoolingAVGLayer_FPGA.hpp  PoolingMAXLayer_FPGA.hpp  Prev1x1Maps.hpp  PriorBoxLayer_FPGA.hpp  QUAD_cfg.hpp  ReshapeLayer_FPGA.hpp  ResidualLayer_FPGA.hpp  ResidualMaps.hpp  SoftMaxLayer_FPGA.hpp  UpSampleLayer_FPGA.hpp  adapt_net_allocator.h  adapt_net_component.h  adapt_net_configuration_list.h  adapt_net_context_id.h  awe_cluster.h  awe_cluster_cascade.h  awp.h  common.hpp  espresso_FPGA_common.hpp  fas.h  fas_aggregation_context.h  (+10 more)
scripts/: caffePython.py  output_golden.txt  tensorforceExample.py  tmp_golden.txt
src/: ActivationLayer.cpp  CNN_Network.cpp  ConcatLayer.cpp  ConcatLayer_DKN.cpp  ConvolutionLayer.cpp  ConvolutionLayer_DKN.cpp  ConvolutionLayer_FPGA.cpp  DataLayer.cpp  FullyConnectedLayer.cpp  Layer.cpp  Network.cpp  NormLayer.cpp  PoolingLayer.cpp  RELULayer.cpp  ResidualLayer.cpp  ResidualLayer_DKN.cpp  ResidualLayer_FPGA.cpp  SoftMaxLayer.cpp  UpSampleLayer.cpp  UpSampleLayer_DKN.cpp  UpSampleLayer_FPGA.cpp  YOLOLayer.cpp  espresso_common.cpp  kernel_group_config.cpp  pixel_seq_config.cpp  res_layer.cpp_bak
src/CPU/: ConcatLayer.cpp  ConvolutionLayer.cpp  DataLayer.cpp  Layer.cpp  ResidualLayer.cpp  UpSampleLayer.cpp  YOLOLayer.cpp
src/Darknet/: ConcatLayer_DKN.cpp  ConvolutionLayer_DKN.cpp  ResidualLayer_DKN.cpp  UpSampleLayer_DKN.cpp
src/FPGA/: .nfs000000002718931b00000070  .nfs000000003f11abf000000072  AWP_cfg.cpp  AccelConfig.cpp  Bias.cpp  ConcatLayer_FPGA.cpp  ConvolutionLayer_FPGA.cpp  DetectionOutputLayer_FPGA.cpp  FAS_cfg.cpp  FlattenLayer_FPGA.cpp  InnerProductLayer_FPGA.cpp  InputMaps.cpp  KernelBias.cpp  Kernels.cpp  Layer_Iteration.cpp  Layer_Job.cpp  OutputMaps.cpp  PSROIPoolingLayer_FPGA.cpp  PartialMap.cpp  PartialMaps.cpp  PermuteLayer_FPGA.cpp  PixelSeqCfg.cpp  PoolingAVGLayer_FPGA.cpp  PoolingMAXLayer_FPGA.cpp  Prev1x1Maps.cpp  PriorBoxLayer_FPGA.cpp  QUAD_cfg.cpp  ReshapeLayer_FPGA .cpp  ResidualLayer_FPGA.cpp  ResidualMaps.cpp  SoftMaxLayer_FPGA.cpp  UpSampleLayer_FPGA.cpp  adapt_net_allocator.cpp  adapt_net_configuration_list.cpp  awe_cluster.cpp  awe_cluster_cascade.cpp  awp.cpp  espresso_FPGA_common.cpp  fas.cpp  fas_aggregation_context.cpp  (+9 more)
tp/caffeDataParser/: CMakeLists.txt  Makefile  cmake_install.cmake
tp/caffeDataParser/example/src/: caffeDataParserMain.cpp
tp/caffeDataParser/inc/: caffeDataParser.hpp
tp/caffeDataParser/src/: caffeDataParser.cpp
